crates/swc_ecma_parser/tests/test262-error-references/fail/55b9f51ad21c7f25.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/55b9f51ad21c7f25.js:1:2
  |
1 | "\u";
  |  ^^

